k8s-example/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: k8s-example
  namespace: k8s-example
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  parentRefs:
    - name: k8s-example-gateway
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: backend-service
          port: 3000
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend-service
          port: 3000
